--- a/package.json
+++ b/package.json
@@ -3,39 +3,49 @@
   "version": "7.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --progress",
-    "build": "ng build --prod",
-    "gitbuild": "ng build --prod --base-href /start-javascript/UOCJob/master/dist/",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run UOCJob:server:production --bundleDependencies all"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "^8.2.14",
-    "@angular/http": "7.1.0",
+    "@angular/animations": "~8.2.4",
+    "@angular/common": "~8.2.4",
+    "@angular/compiler": "~8.2.4",
+    "@angular/core": "~8.2.4",
+    "@angular/forms": "~8.2.4",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^9.0.0-rc.3",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "~8.2.4",
+    "@angular/platform-browser-dynamic": "~8.2.4",
+    "@angular/platform-server": "~8.2.4",
+    "@angular/pwa": "^0.803.22",
+    "@angular/router": "~8.2.4",
+    "@angular/service-worker": "~8.2.4",
+    "@angular/cdk": "^8.2.3",
+    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/http": "7.1.0",
     "@ngrx/effects": "^8.5.2",
     "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
+    "@nguniversal/express-engine": "^8.2.6",
+    "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "angular-in-memory-web-api": "^0.9.0",
     "chart.js": "2.7.3",
     "core-js": "2.5.7",
+    "express": "^4.15.2",
     "hammerjs": "2.0.8",
     "ng2-charts": "1.6.0",
+    "local-storage": "^2.0.0",
+    "localstorage-polyfill": "^1.0.1",
     "ngrx-router": "^2.0.1",
     "ngrx-store-freeze": "^0.2.4",
     "ngrx-store-localstorage": "^8.0.0",
@@ -45,10 +55,11 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.19",
-    "@angular/cli": "^8.3.19",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.803.2",
+    "@angular/cli": "~8.3.2",
+    "@angular/compiler-cli": "~8.2.4",
+    "@angular/language-service": "~8.2.4",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "3.3.0",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "10.12.10",
@@ -61,8 +72,10 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "protractor": "5.4.1",
+    "ts-loader": "^5.2.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "webpack-cli": "^3.1.0"
   }
 }
